--- a/AboutMe.html
+++ b/AboutMe.html
@@ -49,7 +49,7 @@
                         Secondary school :
                         <i>
                             <a href="http://www.satit.su.ac.th/" target="_blank">The demonstration school of Silpakorn University (Secondary)</a> <br>
-                            <a href="img/Transcript.png" target="_blank" >Transcript</a>
+                            <a href="Transcript.png" target="_blank" >Transcript</a>
                         </i>
                     </li>
                 </ul>
